{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 32,
  "lineage": "bc42de72-3c1d-b637-5ca3-fe58033f03dd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b12a96eafe07c61d",
            "arn": "arn:aws:ec2:us-east-1:001016822886:elastic-ip/eipalloc-0b12a96eafe07c61d",
            "domain": "vpc",
            "id": "eipalloc-0b12a96eafe07c61d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-174-46-239.compute-1.amazonaws.com",
            "public_ip": "35.174.46.239",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nodejs-app-eip-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "nodejs-app-eip-1",
              "Project": "nodejs-app"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-044a01e089f74e7db",
            "arn": "arn:aws:ec2:us-east-1:001016822886:elastic-ip/eipalloc-044a01e089f74e7db",
            "domain": "vpc",
            "id": "eipalloc-044a01e089f74e7db",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-159-73-152.compute-1.amazonaws.com",
            "public_ip": "54.159.73.152",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nodejs-app-eip-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "nodejs-app-eip-2",
              "Project": "nodejs-app"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001016822886:internet-gateway/igw-04295af1329bc3f98",
            "id": "igw-04295af1329bc3f98",
            "owner_id": "001016822886",
            "tags": {
              "Name": "nodejs-app-igw"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "nodejs-app-igw",
              "Project": "nodejs-app"
            },
            "vpc_id": "vpc-06ee30dfdd58824d1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b12a96eafe07c61d",
            "association_id": "eipassoc-087e828b99037185c",
            "connectivity_type": "public",
            "id": "nat-088fedc87708a75ea",
            "network_interface_id": "eni-080fa190de2af09ee",
            "private_ip": "10.0.1.136",
            "public_ip": "35.174.46.239",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01d8196b01b6cf594",
            "tags": {
              "Name": "nodejs-app-nat-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "nodejs-app-nat-1",
              "Project": "nodejs-app"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-044a01e089f74e7db",
            "association_id": "eipassoc-0f00f42019f1fa8f9",
            "connectivity_type": "public",
            "id": "nat-0eaa7ad1dd0cea0fd",
            "network_interface_id": "eni-096d67933c6f18363",
            "private_ip": "10.0.2.246",
            "public_ip": "54.159.73.152",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a31aa4c2094a3ba0",
            "tags": {
              "Name": "nodejs-app-nat-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "nodejs-app-nat-2",
              "Project": "nodejs-app"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001016822886:route-table/rtb-0f47ef29afa2b2229",
            "id": "rtb-0f47ef29afa2b2229",
            "owner_id": "001016822886",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-088fedc87708a75ea",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nodejs-app-rt-private-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "nodejs-app-rt-private-1",
              "Project": "nodejs-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ee30dfdd58824d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001016822886:route-table/rtb-0b8d3f76aa548f9d5",
            "id": "rtb-0b8d3f76aa548f9d5",
            "owner_id": "001016822886",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0eaa7ad1dd0cea0fd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nodejs-app-rt-private-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "nodejs-app-rt-private-2",
              "Project": "nodejs-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ee30dfdd58824d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001016822886:route-table/rtb-0c7a1b3077fafffa5",
            "id": "rtb-0c7a1b3077fafffa5",
            "owner_id": "001016822886",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04295af1329bc3f98",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nodejs-app-rt-public"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "nodejs-app-rt-public",
              "Project": "nodejs-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ee30dfdd58824d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e361ddb68679f2c7",
            "route_table_id": "rtb-0f47ef29afa2b2229",
            "subnet_id": "subnet-03c6bb5d51acc3ea0"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8c795143f6a5a3d",
            "route_table_id": "rtb-0b8d3f76aa548f9d5",
            "subnet_id": "subnet-0114833547b90c0b1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b784cba75461258",
            "route_table_id": "rtb-0c7a1b3077fafffa5",
            "subnet_id": "subnet-01d8196b01b6cf594"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d35064281b299ba",
            "route_table_id": "rtb-0c7a1b3077fafffa5",
            "subnet_id": "subnet-0a31aa4c2094a3ba0"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001016822886:security-group/sg-07570e3c407414da8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07570e3c407414da8",
            "ingress": [],
            "name": "nodejs-app-eks-cluster-20250828193420430800000005",
            "name_prefix": "nodejs-app-eks-cluster-",
            "owner_id": "001016822886",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nodejs-app-eks-cluster-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "nodejs-app-eks-cluster-sg",
              "Project": "nodejs-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ee30dfdd58824d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001016822886:security-group/sg-011551579ca780415",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011551579ca780415",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "nodejs-app-eks-nodes-20250828193420433000000006",
            "name_prefix": "nodejs-app-eks-nodes-",
            "owner_id": "001016822886",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nodejs-app-eks-nodes-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "nodejs-app-eks-nodes-sg",
              "Project": "nodejs-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ee30dfdd58824d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-329100925",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07570e3c407414da8",
            "security_group_rule_id": "sgr-0bae15c359dfb51ae",
            "self": false,
            "source_security_group_id": "sg-011551579ca780415",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001016822886:subnet/subnet-03c6bb5d51acc3ea0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c6bb5d51acc3ea0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "001016822886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nodejs-app-private-1",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "nodejs-app-private-1",
              "Project": "nodejs-app",
              "Type": "Private"
            },
            "vpc_id": "vpc-06ee30dfdd58824d1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001016822886:subnet/subnet-0114833547b90c0b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0114833547b90c0b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "001016822886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nodejs-app-private-2",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "nodejs-app-private-2",
              "Project": "nodejs-app",
              "Type": "Private"
            },
            "vpc_id": "vpc-06ee30dfdd58824d1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001016822886:subnet/subnet-01d8196b01b6cf594",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d8196b01b6cf594",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "001016822886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nodejs-app-public-1",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "nodejs-app-public-1",
              "Project": "nodejs-app",
              "Type": "Public"
            },
            "vpc_id": "vpc-06ee30dfdd58824d1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001016822886:subnet/subnet-0a31aa4c2094a3ba0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a31aa4c2094a3ba0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "001016822886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nodejs-app-public-2",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "nodejs-app-public-2",
              "Project": "nodejs-app",
              "Type": "Public"
            },
            "vpc_id": "vpc-06ee30dfdd58824d1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001016822886:vpc/vpc-06ee30dfdd58824d1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0465892d2faa955bb",
            "default_route_table_id": "rtb-083b051567c7a93a2",
            "default_security_group_id": "sg-04ec4deff39659fc6",
            "dhcp_options_id": "dopt-dd0e27a6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06ee30dfdd58824d1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-083b051567c7a93a2",
            "owner_id": "001016822886",
            "tags": {
              "Name": "nodejs-app-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "nodejs-app-vpc",
              "Project": "nodejs-app"
            }
          }
        }
      ]
    }
  ]
}